Fixed profile pic icon getting stretched on certain screens

--- a/client/src/components/InProgressCard/style.css
+++ b/client/src/components/InProgressCard/style.css
@@ -39,7 +39,8 @@
 .profile-pic {
     border-radius: 50%;
     width: 40px;
-    display: inline;
+    height: 40px;
+    /* display: inline; */
 }
 
 .username {
